deployments-mode/canary/service.yml
kind: Service
apiVersion: v1
metadata:
  name: grid
  labels:
    app: grid
spec:
  selector:
    app: grid
  ports:
  - name: http
    port: 8080
    targetPort: 8080
