deployments-mode/canary/destinationRules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grid
spec:
  host: grid
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
