deployments-mode/canary/grid-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grid-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grid
spec:
  hosts:
  - "*"
  gateways:
  - grid-gateway
  http:
  - match:
    - uri:   
        prefix: /grid/
    rewrite:
        uri: /
    route:
    - destination:
        host: grid
        port:
          number: 8080
  - match:
    - uri:
        prefix: /static
    route:
    - destination:
        host: grid
        port:
          number: 8080
